syntax = "proto3";

package data;

option go_package = "./;data";

// Message to represent job ready for next run
message Job {
	string JobName = 1;
	bool ConditionSatisfied = 2;
}

// Request message to get list of jobs for next run
message NextJobsReq {}

// Response message with list of jobs
message NextJobsRes {
	repeated Job JobList = 1;
}

// Service to handle get jobs for next run
service NextJobs {
	rpc Next(NextJobsReq) returns (NextJobsRes) {}
}